--- a/recipes/recipe.yml
+++ b/recipes/recipe.yml
@@ -4,17 +4,17 @@ name: aurora-custom-os
 description: This is my personal OS image.
 
 # the base image to build on top of (FROM) and the version tag to use
-base-image: ghcr.io/ublue-os/silverblue-main
-image-version: 39 # latest is also supported if you want new updates ASAP
+base-image: ghcr.io/ublue-os/aurora-dx
+image-version: 40 # latest is also supported if you want new updates ASAP
 
 # module configuration, executed in order
 # you can include multiple instances of the same module
 modules:
-  - type: files
-    files:
-      - usr: /usr # copies config/files/usr into your image's /usr.
-                  # put configuration files you want in /etc/ on a booted system 
-                  # in /usr/etc/ in the image. read more in files module reference.
+  # - type: files
+  #   files:
+  #     - usr: /usr # copies config/files/usr into your image's /usr.
+  #                 # put configuration files you want in /etc/ on a booted system 
+  #                 # in /usr/etc/ in the image. read more in files module reference.
 
   - type: rpm-ostree
     repos:
@@ -22,6 +22,8 @@ modules:
     install:
       # - micro
       # - starship
+      - kdiskmark
+      - kitty
     remove:
       # example: removing firefox (in favor of the flatpak)
       # "firefox" is the main package, "firefox-langpacks" is a dependency
@@ -39,6 +41,10 @@ modules:
         # - org.mozilla.firefox
         # - org.gnome.Loupe
         # - one.ablaze.floorp//lightning # This is an example of flatpak which has multiple branches in selection (flatpak//branch).
+        - com.quexten.Goldwarden
+        - org.videolan.VLC
+        - org.gnome.meld
+        - sh.cider.Cider
       # Flatpak runtimes are not supported (like org.winehq.Wine//stable-23.08),
       # only normal flatpak applications are (like Floorp Lightning web browser in this example).
       # Installing different branches of the same Flatpak is not supported.
