--- a/recipes/recipe.yml
+++ b/recipes/recipe.yml
@@ -10,12 +10,6 @@ image-version: 40 # latest is also supported if you want new updates ASAP
 # module configuration, executed in order
 # you can include multiple instances of the same module
 modules:
-  # - type: files
-  #   files:
-  #     - usr: /usr # copies config/files/usr into your image's /usr.
-  #                 # put configuration files you want in /etc/ on a booted system 
-  #                 # in /usr/etc/ in the image. read more in files module reference.
-
   - type: rpm-ostree
     repos:
       # - https://copr.fedorainfracloud.org/coprs/atim/starship/repo/fedora-%OS_VERSION%/atim-starship-fedora-%OS_VERSION%.repo
@@ -50,6 +44,15 @@ modules:
       # Installing different branches of the same Flatpak is not supported.
       remove:
       # - org.gnome.eog
+
+  # Install monokle.io app
+  - type: script
+    snippets:
+    - "mkdir -p /usr/share/monokle && curl -L https://github.com/kubeshop/monokle/releases/download/downloads/Monokle-linux-x86_64.AppImage -o ${_}/monokle && chmod 0755 ${_}"
+  - type: files
+    files:
+      - Monokle.desktop: /usr/share/applications/Monokle.desktop
+      - Monokle.png: /usr/share/icons/hicolor/512x512/apps/Monokle.png
 
   - type: signing # this sets up the proper policy & signing files for signed images to work fully
 
