--- a/recipes/recipe.yml
+++ b/recipes/recipe.yml
@@ -39,6 +39,8 @@ modules:
         - org.videolan.VLC
         - org.gnome.meld
         - sh.cider.Cider
+        - com.usebottles.bottles
+        - com.todoist.Todoist
       # Flatpak runtimes are not supported (like org.winehq.Wine//stable-23.08),
       # only normal flatpak applications are (like Floorp Lightning web browser in this example).
       # Installing different branches of the same Flatpak is not supported.
