--- a/recipes/recipe.yml
+++ b/recipes/recipe.yml
@@ -13,6 +13,7 @@ modules:
   - type: rpm-ostree
     repos:
       # - https://copr.fedorainfracloud.org/coprs/atim/starship/repo/fedora-%OS_VERSION%/atim-starship-fedora-%OS_VERSION%.repo
+      
     install:
       # - micro
       # - starship
@@ -51,6 +52,7 @@ modules:
   - type: script
     snippets:
     - "mkdir -p /usr/share/monokle && curl -L https://github.com/kubeshop/monokle/releases/download/downloads/Monokle-linux-x86_64.AppImage -o ${_}/monokle && chmod 0755 ${_}"
+    - "sed -e 's/\u001b[38;2;87;160;198;48/blue/' -i /usr/share/ublue-os/ublue-os.jsonc"
   - type: files
     files:
       - Monokle.desktop: /usr/share/applications/Monokle.desktop
