--- a/recipes/recipe.yml
+++ b/recipes/recipe.yml
@@ -13,11 +13,13 @@ modules:
   - type: rpm-ostree
     repos:
       - https://copr.fedorainfracloud.org/coprs/ignic/akmods/repo/fedora-%OS_VERSION%/ignic-akmods-fedora-%OS_VERSION%.repo
+      - https://copr.fedorainfracloud.org/coprs/ignic/keyd/repo/fedora-%OS_VERSION%/ignic-keyd-fedora-%OS_VERSION%.repo
     install:
       # - micro
       # - starship
       - kdiskmark
       - kitty
+      - keyd
     remove:
       # example: removing firefox (in favor of the flatpak)
       # "firefox" is the main package, "firefox-langpacks" is a dependency
