--- a/recipes/recipe.yml
+++ b/recipes/recipe.yml
@@ -17,6 +17,7 @@ modules:
     install:
       - kitty
       - keyd
+      - pre-commit
     remove:
       # example: removing firefox (in favor of the flatpak)
       # "firefox" is the main package, "firefox-langpacks" is a dependency
