--- a/recipes/recipe.yml
+++ b/recipes/recipe.yml
@@ -14,12 +14,12 @@ modules:
     repos:
       - https://copr.fedorainfracloud.org/coprs/ignic/akmods/repo/fedora-%OS_VERSION%/ignic-akmods-fedora-%OS_VERSION%.repo
       - https://copr.fedorainfracloud.org/coprs/ignic/keyd/repo/fedora-%OS_VERSION%/ignic-keyd-fedora-%OS_VERSION%.repo
-      - https://copr.fedorainfracloud.org/coprs/ryanabx/cosmic-epoch/repo/fedora-%OS_VERSION%/ryanabx-cosmic-epoch-fedora-%OS_VERSION%.repo
     install:
       - xmm7360-pci
       - keyd
       - kitty
-      - cosmic-desktop
+      - snapper
+      - btrfs-assistant
     remove:
       # example: removing firefox (in favor of the flatpak)
       # "firefox" is the main package, "firefox-langpacks" is a dependency
